Fix - issue with more then 10 tokens loading; Beta Fix - issue with note container sizing preventing scroll/opening too large; Beta Fix - Issue with select menu being behind some windows

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -4731,11 +4731,13 @@ div#importer_area>div>div:first-of-type {
     top: 0 !important;
     left: 0 !important;
     float: left !important;
-    width: 90px !important;
-    height: 90px !important;
-    margin: 5px !important;
+    margin: 2px !important;
     position: relative !important;
     opacity: 1 !important;
+}
+.token-change-image-modal .example-token{
+    width:90px;
+    height:90px;
 }
 .custom-token-image-item.ui-draggable-dragging {
     width: auto;
@@ -5372,8 +5374,13 @@ button.token-row-button.token-row-edit-encounter{
     flex: auto;
 }
 #token-configuration-modal .sidebar-panel-body{
-    min-height:300px;
-    max-height:500px;
+    min-height: 265px;
+    max-height: 265px;
+    padding: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    overflow-x: hidden;
 }
 #token-configuration-modal{
     height: unset;
@@ -8377,9 +8384,7 @@ button#changeTokenImage:before{
 .sp-palette-container {
     min-width: 176px;
 }
-[role='dialog'] .note.ui-dialog-content.ui-widget-content {
-    height: 100% !important;
-}
+
 [role='dialog'] .note-text {
     min-height: 450px;
 }
@@ -8762,7 +8767,7 @@ div.note[id^="ui-id"] {
     width: 100% !important;
     padding: 0px !important;
     max-height: calc(100% - 33px) !important;
-
+    position: unset;
 }
 
 .tooltip-body-description-text.note-text img{
@@ -9493,7 +9498,8 @@ button.journal-view-button.journal-button img {
 }
 
 .visibility-container ~ .note-text iframe.journal-site-embed{
-    top: 42px;
+    top: 78px;
+    height: calc(100% - 78px);
 }
 
 
